# boston-house-prices

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: eda.ipynb  poc-linear-regression.ipynb  poc-linear_regression.ipynb  poc-non-linear-regression.ipynb
src/: main.py
src/boston_house_prices/: __init__.py  api.py  cli.py  config.py  data.py  pipeline.py  predict.py  schemas.py  train.py
tests/: test_data.py  test_pipeline.py
