[project]
name = "boston-house-prices"
version = "1.0.0"
description = "Professional machine learning project for house price prediction."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Gabriel Rosalino" }]
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
  "joblib>=1.4.0",
  "pydantic>=2.8.0",
  "typer>=0.12.0",
  "rich>=13.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0"
]
api = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0"
]
notebook = [
  "jupyter>=1.0.0",
  "ipykernel>=6.29.0",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.0"
]

[project.scripts]
boston-train = "boston_house_prices.cli:train_app"
boston-predict = "boston_house_prices.cli:predict_app"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "N", "C4", "SIM"]
ignore = ["PLR0913"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --cov=src/boston_house_prices --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
